<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.utkuozdemir</groupId>
    <artifactId>watchdist</artifactId>
    <version>1.0</version>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <sqlite-jdbc.version>3.7.2</sqlite-jdbc.version>
        <plugins.maven-compiler-plugin.version>3.1</plugins.maven-compiler-plugin.version>
        <poi.version>3.12</poi.version>
        <ormlite-jdbc.version>4.48</ormlite-jdbc.version>
        <onejar-maven-plugin.version>1.4.4</onejar-maven-plugin.version>
        <maven-antrun-plugin.version>1.8</maven-antrun-plugin.version>
        <slf4j-api.version>1.7.12</slf4j-api.version>
        <logback-classic.version>1.1.3</logback-classic.version>
        <javafx-maven-plugin.version>8.1.2</javafx-maven-plugin.version>
        <junit.version>4.12</junit.version>
        <jBCrypt.version>0.4</jBCrypt.version>
        <testfx.version>4.0.1-alpha</testfx.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>${sqlite-jdbc.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>${poi.version}</version>
        </dependency>
        <dependency>
            <groupId>com.j256.ormlite</groupId>
            <artifactId>ormlite-jdbc</artifactId>
            <version>${ormlite-jdbc.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback-classic.version}</version>
        </dependency>
        <dependency>
            <groupId>de.svenkubiak</groupId>
            <artifactId>jBCrypt</artifactId>
            <version>${jBCrypt.version}</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>8.40.9</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-core</artifactId>
            <version>${testfx.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit</artifactId>
            <version>${testfx.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${plugins.maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerId>javac</compilerId>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.zenjava</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx-maven-plugin.version}</version>
                <configuration>
                    <mainClass>org.utkuozdemir.watchdist.app.App</mainClass>
                    <vendor>Nobet</vendor>
                    <appName>NobetYonetim-${project.version}</appName>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <configuration>
                            <mainClass>org.utkuozdemir.watchdist.app.App</mainClass>
                        </configuration>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>${maven-antrun-plugin.version}</version>
                <executions>
                    <execution>
                        <id>default-cli</id>
                        <configuration>
                            <target>
                                <unjar dest="${project.build.directory}/jfx/app/watchdist">
                                    <fileset dir="${project.build.directory}/jfx/app/" includes="*.jar"/>
                                </unjar>

                                <unjar dest="${project.build.directory}/jfx/app/watchdist">
                                    <fileset dir="target/jfx/app/lib/" includes="*.jar"/>
                                    <patternset>
                                        <exclude name="META-INF/**/*"/>
                                    </patternset>
                                </unjar>

                                <jar destfile="${project.build.directory}/${project.artifactId}-${project.version}-oneJar.jar"
                                     manifest="${project.build.directory}/jfx/app/watchdist/META-INF/MANIFEST.MF"
                                     level="9">
                                    <fileset dir="target/jfx/app/watchdist"/>
                                </jar>
                                <delete dir="${project.build.directory}/jfx"/>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <pluginRepositories>
        <pluginRepository>
            <id>onejar-maven-plugin.googlecode.com</id>
            <url>http://onejar-maven-plugin.googlecode.com/svn/mavenrepo</url>
        </pluginRepository>
    </pluginRepositories>

</project>